--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <title>Barra de Navegación con Columnas</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        .container {
+            display: flex;
+            padding: 20px;
+        }
+        .column {
+            flex: 50%;
+            padding: 20px;
+        }
+        .column1 {
+            background-color: #f2f2f2;
+        }
+        .column2 {
+            background-color: #e6e6e6;
+        }
+    </style>
 </head>
 <body>
-    <h1>¡Hola Mundo!</h1>
+
+<!-- Barra de navegación -->
+<nav>
+    <a href="#inicio">Inicio</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#contacto">Contacto</a>
+</nav>
+
+<!-- Contenedor con dos columnas -->
+<div class="container">
+    <div class="column column1">
+        <h2>Columna 1</h2>
+        <p>Este es el texto de la primera columna. Aquí puedes agregar cualquier tipo de contenido, como una descripción, imágenes o información relacionada.</p>
+    </div>
+    <div class="column column2">
+        <h2>Columna 2</h2>
+        <p>Este es el texto de la segunda columna. También puedes personalizar este texto o agregar contenido multimedia según tus necesidades.</p>
+    </div>
+</div>
+
 </body>
 </html>
