--- a/Index.html
+++ b/Index.html
@@ -55,11 +55,11 @@
 <div class="container">
     <div class="column column1">
         <h2>Columna 1</h2>
-        <p>Este es el texto de la primera columna. Aquí puedes agregar cualquier tipo de contenido, como una descripción, imágenes o información relacionada.</p>
+        <p>texto.</p>
     </div>
     <div class="column column2">
         <h2>Columna 2</h2>
-        <p>Este es el texto de la segunda columna. También puedes personalizar este texto o agregar contenido multimedia según tus necesidades.</p>
+        <p>texto.</p>
     </div>
 </div>
 
