--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de Navegación, Información y Formulario</title>
+    <title>| WAVE</title>
     <style>
         body {
             font-family: Arial, sans-serif;
