--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>| WAVE</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Happy Paradise, sans-serif;
             margin: 0;
             padding: 0;
         }
