--- a/Index.html
+++ b/Index.html
@@ -74,6 +74,12 @@
         input[type="submit"]:hover {
             background-color: #444;
         }
+        .logo {
+            display: block; /* Cambiar a bloque */
+            margin: 20px auto; /* Margen automático para centrar */
+            max-width: 100%; /* Para que sea responsiva */
+            height: auto; /* Mantener la proporción */
+        }
     </style>
 </head>
 <body>
@@ -85,6 +91,11 @@
     <a href="#contacto">Contacto</a>
 </nav>
 
+<!-- Logo debajo de la barra de navegación -->
+<img src="file:///Users/lucialucesoli/Documents/Lu/DV/Progra/1.png" alt="Logo" class="logo"> 
+
+
+<!-- Titulo -->
 <div class="column top-column1">
     <h1>| WAVE |</h1>
 </div>
@@ -140,3 +151,13 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
