--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
 </nav>
 
 <!-- Logo debajo de la barra de navegación -->
-<img src="file:///Users/lucialucesoli/Documents/Lu/DV/Progra/1.png" alt="Logo" class="logo"> 
+<img src="https://raw.githubusercontent.com/lucia-lucesoli/progra-dv/3841288f0ad8de726222cc4390ffa7ef1429a5e9/1.png" alt="Logo" class="logo"> 
 
 
 <!-- Titulo -->
